tests/NormalTests/paczka1/small_fuzzy/96362650.err
Error in line 2: IfmgI1 S450 9,9
Error in line 1: qyFwZ2ej A118 94,3
Error in line 11: qyFwZ2ej S450 44,93
Error in line 6: qKx2bWaSNrT A118 12,5
